[package]
name = "metarust"
version = "0.1.0"
description = "一个提供常用辅助工具和函数的 Rust 工具库"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ACANX/MetaRust"
homepage = "https://github.com/ACANX/MetaRust"
keywords = ["工具库", "工具集", "实用工具"]

[dependencies]

[dev-dependencies]

[lib]
name = "metarust"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[example]]
name = "basic"
path = "examples/basic.rs"
